alternativeRoutes.css
/* typography */
.hero-text span{
  color: var(--main-color);
}
.hero-text{
  position: relative;
  top: 10px;
  text-align: center;
}
.alternative-option{
  font-family: var(--secondary-headings-font);
}
p, .alternatives-section-intro, .principle-section-intro {
  font-family: var(--paragraph-text-font);
}
.mute{
font-family: var(--paragraph-text-font);
font-weight: lighter;
padding: 10px;
font-size: em;
}
body{
  font-size: 16px;
}
/* typography end */


/* hero-section */
.hero-section-container{
  display: flex;
  justify-content: center;
  align-content: center;
  height: auto;
  width: 100vw;
  font-size: 3rem;
  margin: 30px 0;
}
.secondary-color{
width: 90vw;
  margin-left: auto;
  margin-right: auto;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}


/* alternative paths about section */
.alternative-paths-text{
  font-size: 1.4rem;
  line-height: 1.6;
padding: 10px;
 font-family: var(--secondary-headings-font);
}
.alternative-paths-container{
  display: flex;
  justify-content: center;
  align-content: center;
padding: 25px;
  border-radius: 20px;
  position: relative;
}
.alternative::before{
content: "";
width: 100%;
height: 55vh;
top: 800px;
background-color: var(--secondary-color);
position: absolute;
z-index: -1;
transform: skewY(-10deg);
}


/* principles section */

.principle-section-header, .principle-section-intro, .alternatives-section-header, .alternatives-section-intro{
  text-align: center;
}

.principle-section-header,.alternatives-section-header{
  font-size:5rem;
  padding: 20px;
}
.principle-section-intro,.alternatives-section-intro{
  font-size: 2.5rem;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 80px;
}

.principles::before{
  content: "";
  width: 100%;
  height: 1300px;
  position: absolute;
  background-color: var(--light-accent-color);
  top: 2000;
  z-index: -1;
  transform: skewY(-10deg);
}
.principles-container{
display: flex;
align-items: center;
justify-content: center;
padding: 25px;
margin-bottom: 400px;
}
.principle-header{
font-size: 2.5rem;
margin: 20px;
color: #FEAF61;
font-family: var(--main-headings-font);
letter-spacing: 2px;
}
.principles-text{
width: 90%;
height: 100%;
margin-left: auto;
margin-right: auto;
line-height:normal;
color: #ffffff;
font-family: var(--paragraph-text-font);
margin-bottom: 10px;

}
.principle-img{
padding: 0;
width: 300px;
margin-left: 20px;
}


/* Media Queries */

@media only screen and  (max-width: 1025px){

section .principles{
  display: none;
}

}
@media only screen and  (max-width: 1280px){
.hero-section-container{
margin: 0;
}
  .hero-text{
      font-size: 5rem;
}

}


@media only screen and  (max-width: 1000px){
h1{
font-size: 2.5rem;
}
.principles-container{
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
}
.fullcap{
  top: 0;
}
.fullwrap{
  margin-left: auto;
  margin-right: auto;
  top: 0;
}
  .alternatives-section-header,.hero-text, .principle-header, .principle-section-header{
      font-size: 2rem;
}
.principle-section-intro, .alternatives-section-intro{
  font-size: 1.5rem;
  width: 90%;
}
  .principle-container{
      flex-direction: column;
  }

  .principle-text{
      font-size: 1.5rem;
      width: 90%;
      line-height: normal;
  }
.hero-section-container{
  height: auto;
}
.alternative-paths-container{
  flex-direction: column;
  box-shadow: none;
  width: 100vw;
  padding: 10px;
}
.alternative-paths-text{
  margin-bottom: 30px;
  font-size: 1rem;
}
}    

/* alternative path cards styling */
.main{
max-width: 1200px;
margin: 0 auto;
}


img {
height: auto;
max-width: 100%;
vertical-align: middle;
}

.btn {
color: #ffffff;
padding: 0.8rem;
font-size: 14px;
text-transform: uppercase;
border-radius: 4px;
font-weight: 400;
display: block;
width: 100%;
cursor: pointer;
border: 1px solid rgba(255, 255, 255, 0.2);
background: transparent;
}

.btn:hover {
background-color: rgba(255, 255, 255, 0.12);
}

.cards {
display: flex;
flex-wrap: wrap;
list-style: none;
margin: 0;
padding: 0;
}

.cards_item {
display: flex;
padding: 1rem;
}

@media (min-width: 40rem) {
.cards_item {
  width: 50%;
}
}

@media (min-width: 56rem) {
.cards_item {
  width: 33.3333%;
}
}
.alternative-paths{
  max-width: 1200px;
  margin: 0 auto;
}

.card {
background-color: white;
border-radius: 0.25rem;
box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
display: flex;
flex-direction: column;
overflow: hidden;
}

.card_content {
padding: 1rem;
background: linear-gradient(to bottom left, #FE5757 40%,  #FEAF61 100%);
}

.card_title {
color: #ffffff;
font-size: 1.1rem;
font-weight: 700;
letter-spacing: 1px;
text-transform: capitalize;
margin: 0px;
font-family: var(--secondary-headings-font);
}

.card_text {
color: #ffffff;
font-size: 0.875rem;
line-height: 1.5;
margin-bottom: 1.25rem;    
font-weight: 400;
font-family: var(--paragraph-text-font);
}

